# claudebar

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: development-plan.xml  fpf-review-2026-06-25.md  knowledge-graph.xml  requirements.xml  technology.xml  verification-plan.xml
docs/afk-sessions/2026-06-11T224050-201e/: decisions.md  deferred.md  state.json
docs/superpowers/plans/: 2026-06-20-clfind-mvp.md  2026-06-27-whisper-dictate.md
docs/superpowers/specs/: 2026-06-20-chat-folder-search-design.md  2026-06-27-voice-input-design.md
hooks/: README.md  claudebar-bell.ps1  claudebar-busy.ps1  install-bell-hook.ps1
src/: activate.rs  audio.rs  config.rs  icon.rs  index.rs  main.rs  paste.rs  recent.rs  render.rs  sdaemon.rs  search.rs  settings.rs  signal.rs  stt.rs  transform.rs  voice.rs  win_enum.rs
