[package]
name = "claudebar"
version = "0.4.1"
edition = "2021"
description = "Tiny always-on-top switcher for your open Claude Code / editor windows"
license = "MIT"
repository = "https://github.com/Baho73/claudebar"

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[dependencies.serde_json]
version = "1"

# Захват аудио с микрофона (M-AUDIO, голосовой ввод). Чистый windows-rs (WASAPI), без C —
# сборка под windows-gnu проверена спайком 2026-06-28 (cpal 0.15.3).
[dependencies.cpal]
version = "0.15"

[dependencies.calamine]
version = "0.26"

[dependencies.zip]
version = "2"
default-features = false
features = ["deflate"]

[dependencies.pdf-extract]
version = "0.7"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
